--- a/projeto_site/style.css
+++ b/projeto_site/style.css
@@ -55,6 +55,10 @@ header {
     padding-top: 8rem;
 }
 
+.bg-home-time {
+    background-color: #18d39a;
+}
+
 .bg-home-color {
     background-color: #18d39a;
     color: white;
@@ -67,7 +71,7 @@ header {
     margin-bottom: 0;
     border-top-right-radius: 0% !important;
     border-bottom-right-radius: 0% !important;
-} 
+}
 
 .font-paragraf {
     font-size: 14px;
@@ -78,21 +82,23 @@ header {
 }
 
 .custom-bordar {
-    border-top-right-radius: 14px; 
+    border-top-right-radius: 14px;
     background-color: #476370;
 }
+
 .paragraf-home {
     font-size: 13px;
 }
 
 .btn-home {
     background-color: #18d39a !important;
-    color: white  !important;
+    color: white !important;
 }
 
 .custom-list {
     border-radius: 0% !important;
 }
+
 /* Página vagas */
 .bg-vagas {
     background-image: url(/imagens/bg_vaga.jpg);
@@ -124,7 +130,7 @@ header {
     background-position: center;
     height: 20rem;
     color: white;
-    padding-top: 9rem;
+    padding-top: 8rem;
 }
 
 .img-card-projeto {
@@ -138,7 +144,7 @@ header {
 }
 
 .card-text {
-    text-align: justify ;
+    text-align: justify;
 }
 
 .font-color-card {
