--- a/JobTeens_MVC/src/main/resources/templates/candidatura/form.html
+++ b/JobTeens_MVC/src/main/resources/templates/candidatura/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head th:replace="~{fragments/head :: head ('JobTeens | Usuários', 'style')}"></head>
+<head th:replace="~{fragments/head :: head ('JobTeens | Candidaturas', 'style')}"></head>
 
 <body>
 	<!-- Aside -->
@@ -13,52 +13,45 @@
 				<div class="col-sm-12">
 					<div class="card shadow border-0">
 						<div class="card-header p-4 border-0">
-							<h5>Usuário | Dados Cadastrais</h5>
+							<h5>Candidaturas | Dados de Candidatura</h5>
 						</div>
 						<div class="card-body">
 							<!--Início Form -->
-							<form method="POST" th:object="${usuario}">
+							<form method="POST" th:object="${candidaturas}">
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
 								<div class="form-floating mt-4 mb-3">
-									<input class="form-control" type="hidden" id="idUsuario" th:field="*{idUsuario}">
+									<input class="form-control" type="hidden" id="idCandidatura"
+										th:field="*{idCandidatura}">
+								</div>
+
+
+
+
+								<div class="form-floating mt-4 mb-3 mx-3">
+									<select th:field="*{vagas}" class="form-control" id="vagas">
+										<option th:each="vaga : ${vagas}" th:text="${vaga.tituloVaga}"
+											th:value="${vaga.idVagas}"></option>
+									</select>
+									<label for="vagas">Vagas</label>
 								</div>
 
 								<div class="form-floating mt-4 mb-3 mx-3">
-									<input class="form-control" type="text" id="nome" th:field="*{nome}"
-										placeholder="nome">
-									<label for="nome">Nome</label>
+									<select th:field="*{usuario}" class="form-control" id="usuario">
+										<option th:each="usuario : ${usuarios}" th:text="${usuario.nome}"
+											th:value="${usuario.idUsuario}"></option>
+									</select>
+									<label for="usuario">Usuários</label>
 								</div>
 
 								<div class="form-floating mt-4 mb-3 mx-3">
-									<input class="form-control" type="email" id="email" th:field="*{email}"
-										placeholder="email">
-									<label for="email">E-mail</label>
-								</div>
-
-								<div class="form-floating mt-4 mb-3 mx-3">
-									<input class="form-control" type="tel" id="telefone" th:field="*{telefone}"
-										placeholder="telefone">
-									<label for="telefone">Telefone</label>
-								</div>
-								<div class="form-floating mt-4 mb-3 mx-3">
-									<input class="form-control" type="text" id="cpf" th:field="*{cpf}"
-										placeholder="cpf">
-									<label for="cpf">CPF</label>
-								</div>
-								<div class="form-floating mt-4 mb-3 mx-3">
-									<input class="form-control" type="text" id="endereco" th:field="*{endereco}"
-										placeholder="endereço">
-									<label for="endereco">Endereço</label>
-								</div>
-								<div class="form-floating mt-4 mb-4 mx-3">
-									<input class="form-control" type="password" id="senha" th:field="*{senha}"
-										placeholder="senha">
-									<label for="senha">Senha</label>
+									<input class="form-control" type="date" id="dataCandidatura"
+										th:field="*{dataCandidatura}" placeholder="dataCandidatura">
+									<label for="nome">Data da Candidatura</label>
 								</div>
 
 								<div class="m-3 d-flex gap-2">
 									<button class="btn btn-primary" type="submit">Salvar</button>
-									<a href="/usuarios" class="btn btn-danger">Cancelar</a>
+									<a href="/candidaturas" class="btn btn-danger">Cancelar</a>
 								</div>
 							</form>
 							<!--Fim Form -->
@@ -82,6 +75,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<!-- JavaScripts -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
