--- a/JobTeens_MVC/src/main/resources/templates/fragments/head.html
+++ b/JobTeens_MVC/src/main/resources/templates/fragments/head.html
@@ -1,17 +1,25 @@
 <!-- Início Fragments Head -->
-<head th:fragment="head(titulo)">
+
+<head th:fragment="head(titulo, style)">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title th:text="${titulo}">JobTeens</title>
 	<!-- CSS -->
-	<link href="/css/style.css" rel="stylesheet" type="text/css">
-	<!-- Bootstrap -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-	<!-- Bootstrap icons -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="/img/logo.png" type="image/png">
+	<th:block th:switch="${style}">
+		<th:block th:case="'style'">
+			<link href="/css/style.css" rel="stylesheet" type="text/css">
+		</th:block>
+		<th:block th:case="'style2'">
+			<link href="/css/style2.css" rel="stylesheet" type="text/css">
+		</th:block>
+		</th:switch>
+		<!-- Bootstrap -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+		<!-- Bootstrap icons -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="/img/logo.png" type="image/png">
 </head>
 <!-- Fim Fragments Head -->
