--- a/JobTeens_MVC/src/main/resources/templates/vagas/home.html
+++ b/JobTeens_MVC/src/main/resources/templates/vagas/home.html
@@ -1,81 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head th:replace="~{fragments/head :: head ('JobTeens | Vagas')}"></head>
+<head th:replace="~{fragments/head :: head ('JobTeens | Vagas', 'style')}"></head>
 
 <body>
+	<!-- Aside -->
 	<header th:replace="~{fragments/header :: header}"></header>
 
 	<main>
 		<section class="container-fluid p-5">
-			<div class="row mb-4">
-				<div class="col-sm-12">
-					<h3>Vagas</h3>
-					<h4 class="lead">Oportunidades disponiveis</h4>
-				</div>
-			</div>
-
 			<div class="row">
-				<div th:each="vaga : ${vagas}" class="col-md-6">
-					<!-- Inicio Card  -->
+				<div class="col-sm-12">
 					<div class="card border-0 shadow">
-						<div class="card-header py-2 border-0" th:text="${vaga.empresa.nomeEmpresa}"></div>
+						<div class="card-header p-4 border-0">
+							<h4>Vagas</h4>
+						</div>
 						<div class="card-body">
-							<h5 class="card-title" th:text="${vaga.tituloVaga}"></h5>
-							<h6 class="card-subtitle mb-2 text-muted">ID: <span th:text="${vaga.idVagas}"></span></h6>
-							<p class="card-text"><strong>Descrição: </strong><span th:text="${vaga.descricao}"></span>
-							</p>
-							<p class="card-text"><strong>Requisitos: </strong><span th:text="${vaga.requisitos}"></span>
-							</p>
-							<p class="card-text"><strong>Salário: </strong><span th:text="${vaga.salario}"></span></p>
-
-							<a class="btn btn-primary" title="Editar"
-								th:href="@{/vagas/{id}/editar (id=${vaga.idVagas})}">
-								<i class="bi bi-pencil-square me-1"></i>Editar
-							</a>
-
-							<!-- Âncora Modal Delete-->
-							<a class="btn btn-danger" data-bs-toggle="modal"
-								th:data-bs-target="'#confirmDeleteModal-' + ${vaga.idVagas}">
-								<i class="bi bi-trash3 me-1"></i>Excluir
-							</a>
-							<!-- Inicio Modal Delete -->
-							<div class="modal fade" th:id="'confirmDeleteModal-' + ${vaga.idVagas}" tabindex="-1"
-								aria-labelledby="deleteModalLabel" aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content p-3">
-										<div class="modal-header">
-											<h5 class="modal-title" id="deleteModalLabel">Confirme
-												Exclusão</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"
-												aria-label="Close"></button>
-										</div>
-										<div class="modal-body text-center mt-3">
-											<span class="fs-5">Tem certeza que deseja excluir a vaga de <span
-													th:text="${vaga.tituloVaga}"></span>?</span>
-										</div>
-										<div class="p-4 d-flex gap-2 justify-content-center">
-											<a type="button" th:href="@{/vagas/{id}/excluir (id=${vaga.idVagas})}"
-												class="btn btn-danger">Confirmar</a>
-											<a type="button" class="btn btn-primary" href="/vagas">Cancelar</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<!-- Fim Modal Delete-->
-							<div class="card-footer bg-transparent mt-3 pb-0 text-muted">
-								<i class="bi bi-calendar-check me-2"></i><small>Data de publicação:
-									<span th:text="${vaga.dataPublicacao}"></span></small>
+							<div class="table-responsive">
+								<table class="table table-hover table-borderless">
+									<thead>
+										<tr>
+											<th scope="col">ID</th>
+											<th scope="col">Cargo</th>
+											<th scope="col">Empresa</th>
+											<th scope="col">Descrição</th>
+											<th scope="col">Requisitos</th>
+											<th scope="col">Salário</th>
+											<th scope="col">Data de Publicação</th>
+											<th scope="col">Opções</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr th:each="vaga : ${vagas}">
+											<th scope="row" th:text="${vaga.idVagas}"></th>
+											<td th:text="${vaga.tituloVaga}"></td>
+											<td th:text="${vaga.empresa.nomeEmpresa}"></td>
+											<td th:text="${vaga.descricao}"></td>
+											<td th:text="${vaga.requisitos}"></td>
+											<td th:text="${vaga.salario}"></td>
+											<td th:text="${vaga.dataPublicacao}"></td>
+											<td class="d-flex gap-2">
+												<!-- Âncora Modal-->
+												<a class="btn btn-primary d-flex my-auto" title="Editar"
+													th:href="@{/vagas/{id}/editar (id=${vaga.idVagas})}">
+													<i class="bi bi-pencil-square me-1"></i>
+													Editar
+												</a>
+												<!-- Âncora Modal Delete-->
+												<a class="btn btn-danger d-flex my-auto" data-bs-toggle="modal"
+													th:data-bs-target="'#confirmDeleteModal-' + ${vaga.idVagas}">
+													<i class="bi bi-trash3 me-1"></i>Excluir
+												</a>
+												<!-- Inicio Modal Delete -->
+												<div class="modal fade" th:id="'confirmDeleteModal-' + ${vaga.idVagas}"
+													tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+													<div class="modal-dialog">
+														<div class="modal-content align-items-center p-3">
+															<img src="/img/alert_delete.png" height="115" width="111" />
+															<div class="modal-body text-center">
+																<div class="modalTitle">Tem a certeza?</div>
+																<span>Deseja excluir a vaga de
+																	<span th:text="${vaga.tituloVaga}"></span>?
+																</span>
+															</div>
+															<div class="p-2 d-flex gap-2 justify-content-center">
+																<a type="button"
+																	th:href="@{/vagas/{id}/excluir (id=${vaga.idVagas})}"
+																	class="btn btn-danger">Confirmar</a>
+																<a type="button" class="btn btn-primary"
+																	href="/vagas">Cancelar</a>
+															</div>
+														</div>
+													</div>
+												</div>
+												<!-- Fim Modal Delete-->
+											</td>
+										</tr>
+									</tbody>
+								</table>
 							</div>
 						</div>
 					</div>
-					<!-- Fim Card  -->
 				</div>
-
 			</div>
 		</section>
 	</main>
 
+	<!-- Rodapé -->
+	<footer>
+		<div class="container-fluid d-flex justify-content-between pt-3">
+			<span>
+				<p>&copy; 2023 JobTeens. Todos os direitos reservados.</p>
+			</span>
+			<div>
+				<i class="bi bi-facebook fs-5 pe-1"></i>
+				<i class="bi bi-instagram fs-5 pe-1"></i>
+				<i class="bi bi-twitter fs-5"></i>
+			</div>
+		</div>
+	</footer>
 	<!-- JavaScripts -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
