--- a/JobTeens_MVC/src/main/resources/templates/vagas/form.html
+++ b/JobTeens_MVC/src/main/resources/templates/vagas/form.html
@@ -55,7 +55,7 @@
 										<option th:each="empresa : ${empresas}" th:text="${empresa.nomeEmpresa}"
 											th:value="${empresa.idEmpresa}"></option>
 									</select>
-									<label for="empresa">Empresa</label>
+									<label for="empresa">Selecione Empresa</label>
 								</div>
 								<div class="m-3 d-flex gap-2">
 									<button class="btn btn-primary" type="submit">Salvar</button>
