--- a/JobTeens_MVC/src/main/resources/templates/fragments/header.html
+++ b/JobTeens_MVC/src/main/resources/templates/fragments/header.html
@@ -77,13 +77,13 @@
 				<div class="dropup-center dropup px-4 pb-4">
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
 						aria-expanded="false">
-						<i class="bi bi-person-circle fs-4 me-1"></i> User
+					<span th:if="${#authorization.expression('isAuthenticated()')}" th:text="${#authentication.principal.nome}"></span>
 					</a>
 					<div class="dropdown-menu mx-4">
 						<a class="dropdown-item" href="#"><i class="bi bi-person"></i> Perfil</a>
 						<a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Configurações</a>
 						<hr class="dropdown-divider">
-						<a class="dropdown-item" href="#"><i class="bi bi-box-arrow-left"></i> Logout</a>
+						<a class="dropdown-item" th:href="@{/logout}"><i class="bi bi-box-arrow-left"></i> Logout</a>
 					</div>
 				</div>
 			</div>
