--- a/JobTeens_MVC/src/main/resources/templates/login/login.html
+++ b/JobTeens_MVC/src/main/resources/templates/login/login.html
@@ -1,53 +1,44 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 
-<head th:replace="~{fragments/head :: head ('JobTeens | Usuários')}"></head>
+<head>
 
-<body>
+	<head th:replace="~{fragments/head :: head ('JobTeens | Login', 'style2')}"></head>
+</head>
 
-	<!-- Inicio Card login -->
-	<section class="container-fluid p-5">
-		<div class="row ">
+<body class="bgLogin">
 
-			<div class="col-md-8 mx-auto">
-				<div class="card">
-					<div class="card-body">
-						<p class="">Entre com suas credenciais para iniciar a seção</p>
+	<main>
+		<section class="area-login">
+			<div class="login shadow">
 
-						<form method="POST" th:action="@{/login}">
-							<div class="input-group mb-3">
-								<input type="email" class="form-control" placeholder="E-mail" name="emailCoorporativo" required>
-								<div class="input-group-append">
-									<div class="input-group-text">
-									</div>
-								</div>
-							</div>
-							<div class="input-group mb-3">
-								<input type="password" class="form-control" placeholder="Senha" name="senha"
-									required>
-								<div class="input-group-append">
-									<div class="input-group-text">
-										<span class="fas fa-lock"></span>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-4">
-									<button type="submit" class="btn btn-primary btn-block">Entrar</button>
-								</div>
-							</div>
-						</form>
-					</div>
+				<div class="d-flex align-items-center gap-2 mt-2 mb-4">
+					<a href="/"><img src="/img/logo.png" height="60" width="60"></a>
+					<h2 class="loginLogo">JobTeens</h2>
 				</div>
+
+				<h6 class="text-white text-start">Olá seja bem-vindo(a)!</h6>
+				<p class="textLogin">Para continuar faça login</p>
+				<form th:action="@{/login}" method="post">
+
+					<div class="form-floating mb-3">
+						<input class="form-control" type="email" id="email" name="username" placeholder="email"
+							autofocus />
+						<label for="email"><i class="bi bi-envelope-at"></i> Endereço de Email</label>
+					</div>
+
+					<div class="form-floating mb-3">
+						<input class="form-control" type="password" id="senha" name="password" placeholder="senha" />
+						<label for="senha"><i class="bi bi-key"></i> Senha</label>
+					</div>
+					<input class="btn btnGroupThree btn-lg" type="submit" value="Entrar" />
+
+				</form>
+				<div th:if="${param.error}" class="mt-4 text-muted">
+					Email ou senha inválidos!</div>
 			</div>
-			<!-- Fim Card Login -->
-	</section>
-	<!-- JavaScripts -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-		crossorigin="anonymous"></script>
-	<script src="js/scripts.js"></script>
+		</section>
+	</main>
 </body>
 
 </html>
