--- a/JobTeens_MVC/src/main/resources/templates/usuario/form.html
+++ b/JobTeens_MVC/src/main/resources/templates/usuario/form.html
@@ -24,6 +24,10 @@
 								</div>
 
 								<div class="form-floating mt-4 mb-3 mx-3">
+									<input type="hidden" id="perfil" name="perfil" value="USUARIO">
+								</div>
+
+								<div class="form-floating mt-4 mb-3 mx-3">
 									<input class="form-control" type="text" id="nome" th:field="*{nome}"
 										placeholder="nome">
 									<label for="nome">Nome</label>
@@ -52,7 +56,7 @@
 								</div>
 								<div class="form-floating mt-4 mb-4 mx-3">
 									<input class="form-control" type="password" id="senha" th:field="*{senha}"
-										placeholder="senha" >
+										placeholder="senha">
 									<label for="senha">Senha</label>
 								</div>
 
