--- a/JobTeens_MVC/src/main/resources/templates/empresa/form.html
+++ b/JobTeens_MVC/src/main/resources/templates/empresa/form.html
@@ -24,6 +24,10 @@
 								</div>
 
 								<div class="form-floating mt-4 mb-3 mx-3">
+									<input type="hidden" id="perfil" name="perfil" value="EMPRESA">
+								</div>
+
+								<div class="form-floating mt-4 mb-3 mx-3">
 									<input class="form-control" type="text" id="nomeEmpresa" th:field="*{nomeEmpresa}"
 										placeholder="nomeEmpresa">
 									<label for="nome">Empresa</label>
@@ -82,7 +86,7 @@
 			</div>
 		</div>
 	</footer>
-	
+
 	<!-- JavaScripts -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
