--- a/JobTeens_MVC/src/main/resources/templates/usuario/home.html
+++ b/JobTeens_MVC/src/main/resources/templates/usuario/home.html
@@ -26,7 +26,7 @@
 											<th scope="col">E-mail</th>
 											<th scope="col">Endereço</th>
 											<th scope="col">Telefone</th>
-											<th scope="col">Opções</th>
+											<th scope="col" sec:authorize="hasAuthority('EMPRESA')">Opções</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -40,13 +40,13 @@
 											<td class="d-flex gap-2">
 												<!-- Âncora Modal-->
 												<a class="btn btn-primary d-flex my-auto" title="Editar"
-													th:href="@{/usuarios/{id}/editar (id=${usuario.idUsuario})}">
+													th:href="@{/usuarios/{id}/editar (id=${usuario.idUsuario})}" sec:authorize="hasAuthority('EMPRESA')">
 													<i class="bi bi-pencil-square me-1"></i>
 													Editar
 												</a>
 												<!-- Âncora Modal Delete-->
 												<a class="btn btn-danger d-flex my-auto" data-bs-toggle="modal"
-													th:data-bs-target="'#confirmDeleteModal-' + ${usuario.idUsuario}">
+													th:data-bs-target="'#confirmDeleteModal-' + ${usuario.idUsuario}" sec:authorize="hasAuthority('EMPRESA')">
 													<i class="bi bi-trash3 me-1"></i>Excluir
 												</a>
 												<!-- Inicio Modal Delete -->
