--- a/JobTeens_MVC/src/main/resources/templates/vagas/home.html
+++ b/JobTeens_MVC/src/main/resources/templates/vagas/home.html
@@ -27,7 +27,7 @@
 											<th scope="col">Requisitos</th>
 											<th scope="col">Salário</th>
 											<th scope="col">Data de Publicação</th>
-											<th scope="col">Opções</th>
+											<th scope="col" sec:authorize="hasAuthority('EMPRESA')">Opções</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -42,13 +42,13 @@
 											<td class="d-flex gap-2">
 												<!-- Âncora Modal-->
 												<a class="btn btn-primary d-flex my-auto" title="Editar"
-													th:href="@{/vagas/{id}/editar (id=${vaga.idVagas})}">
+													th:href="@{/vagas/{id}/editar (id=${vaga.idVagas})}" sec:authorize="hasAuthority('EMPRESA')">
 													<i class="bi bi-pencil-square me-1"></i>
 													Editar
 												</a>
 												<!-- Âncora Modal Delete-->
 												<a class="btn btn-danger d-flex my-auto" data-bs-toggle="modal"
-													th:data-bs-target="'#confirmDeleteModal-' + ${vaga.idVagas}">
+													th:data-bs-target="'#confirmDeleteModal-' + ${vaga.idVagas}" sec:authorize="hasAuthority('EMPRESA')">
 													<i class="bi bi-trash3 me-1"></i>Excluir
 												</a>
 												<!-- Inicio Modal Delete -->
