--- a/JobTeens_MVC/src/main/resources/templates/carreira.html
+++ b/JobTeens_MVC/src/main/resources/templates/carreira.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head th:replace="~{fragments/head :: head ('JobTeens | Projetos&Cursos', 'style2')}"></head>
+<head th:replace="~{fragments/head :: head ('JobTeens | Carreira', 'style2')}"></head>
 
 <body>
 	<!-- NavBar -->
