--- a/JobTeens_MVC/src/main/resources/templates/fragments/navbar.html
+++ b/JobTeens_MVC/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
 				<div class="navbar-nav ps-1 px-3">
 					<a class="nav-link" href="/">Home</a>
 					<a class="nav-link" href="vagas/vagasdisponiveis">Vagas</a>
-					<a class="nav-link" href="/projetocursos">Projetos&Cursos</a>
+					<a class="nav-link" href="/carreira">Carreira</a>
 					<a class="nav-link" href="/sobrenos">Sobre nós</a>
 					<form class="d-flex flex-column flex-lg-row gap-2" role="search">
 						<a href="/login" class="btn btnGroup">
